--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "andromeda-dashboard",
   "private": true,
@@ -21,6 +20,7 @@
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-basic-ssl": "^1.2.0"
   }
 }
