--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "andromeda-dashboard",
   "private": true,
@@ -16,7 +17,9 @@
     "vite": "^6.0.0",
     "tailwindcss": "^3.4.15",
     "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
